Fix input text clipping

--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ canvas {
 }
 input[type="text"] {
   font-size: 16px;
-  font-size: 2.5vmin;
+  font-size: 2vmin;
 }
